// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App snapshots 1`] = `
<div
  className="page"
>
  <h2>
    Welcome to the Road to learn React
  </h2>
  <h3>
    Hi, 
    Jerry
     
    Smith
  </h3>
  <div
    className="interactions"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        onChange={[Function]}
        type="text"
        value="redux"
      />
      <button
        type="submit"
      >
        Search
      </button>
    </form>
  </div>
  <div
    className="table"
  >
    <div
      className="table-header"
    >
      <span
        style={
          Object {
            "width": "40%",
          }
        }
      >
        <div
          className="sort-direction"
        >
          <span>
            <button
              className="button-inline"
              onClick={[Function]}
              type="button"
            >
              Title
            </button>
          </span>
          <span />
        </div>
      </span>
      <span
        style={
          Object {
            "width": "30%",
          }
        }
      >
        <div
          className="sort-direction"
        >
          <span>
            <button
              className="button-inline"
              onClick={[Function]}
              type="button"
            >
              Author
            </button>
          </span>
          <span />
        </div>
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        <div
          className="sort-direction"
        >
          <span>
            <button
              className="button-inline"
              onClick={[Function]}
              type="button"
            >
              Comments
            </button>
          </span>
          <span />
        </div>
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        <div
          className="sort-direction"
        >
          <span>
            <button
              className="button-inline"
              onClick={[Function]}
              type="button"
            >
              Points
            </button>
          </span>
          <span />
        </div>
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        Archive
      </span>
    </div>
  </div>
  <div
    className="interactions"
  >
    <div>
      <i
        className="fa fa-spinner fa-pulse fa-2x"
      />
    </div>
  </div>
</div>
`;

exports[`Button snapshots 1`] = `
<button
  className=""
  onClick={[Function]}
  type="button"
>
  Give Me More
</button>
`;

exports[`Search snapshots 1`] = `
<form
  onSubmit={[Function]}
>
  <input
    onChange={[Function]}
    type="text"
    value=""
  />
  <button
    type="submit"
  >
    Search
  </button>
</form>
`;

exports[`Table snapshots 1`] = `
<div
  className="table"
>
  <div
    className="table-header"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <div
        className="sort-direction"
      >
        <span>
          <button
            className="button-inline"
            onClick={[Function]}
            type="button"
          >
            Title
          </button>
        </span>
        <span />
      </div>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <div
        className="sort-direction"
      >
        <span>
          <button
            className="button-inline"
            onClick={[Function]}
            type="button"
          >
            Author
          </button>
        </span>
        <span />
      </div>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <div
        className="sort-direction"
      >
        <span>
          <button
            className="button-inline"
            onClick={[Function]}
            type="button"
          >
            Comments
          </button>
        </span>
        <span />
      </div>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <div
        className="sort-direction"
      >
        <span>
          <button
            className="button-inline"
            onClick={[Function]}
            type="button"
          >
            Points
          </button>
        </span>
        <span />
      </div>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      Archive
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a
        href={undefined}
      >
        1
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a
        href={undefined}
      >
        2
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
</div>
`;
